--- a/site/mod2_solution/css/style.css
+++ b/site/mod2_solution/css/style.css
@@ -7,30 +7,42 @@ h1 {
 	text-align: center;
 }
 
-div#container {
-	background-color: #00FFFF;
-	top: 60px;
+section {
 	position: relative;
+	padding: 15px;
+	width: 90%;
+}
+
+div {
+	position: relative;
+	background-color: dimgrey;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: auto;
+	border: 2px solid black;
 }
 
 /* Simple Responsive Framework. */
 .row {
-	width: 100%;
+	width: 90%;
 	position: relative;
+	padding: 15px;
 }
 
 .row > div{
-	border: 1px solid black;
+	border: 2px solid black;
 	position: relative;
-	background-color: #FF7F50;
+	background-color: dimgrey;
 }
 
 #p1 {
-	/*background-color: #FF7F50;*/
 	position: relative;
 	width: 100%;
 	height: 300px;
 	top: 200px;
+	overflow: auto;
+	padding: 6px;
+	font-weight: bold;
 }
 
 #p2 {
@@ -40,6 +52,10 @@ div#container {
 	width: 100px;
 	height: 30px;
 	text-align: center;
+	padding: 5px;
+	margin: 0px;
+	border: 2px solid black;
+	font-weight: bold;
 }
 
 #p3 {
@@ -49,21 +65,32 @@ div#container {
 	width: 100px;
 	height: 30px;
 	text-align: center;
+	padding: 5px;
+	margin: 0px;
+	border: 2px solid black;
+	font-weight: bold;
 }
 
 #p4 {
-	background-color: yellowgreen;
+	background-color: lightyellow;
 	position: absolute;
 	right: 0;
 	width: 100px;
 	height: 30px;
 	text-align: center;
+	padding: 5px;
+	margin: 0px;
+	border: 2px solid black;
+	font-weight: bold;
 }
 
 /********** Desktop Version **********/
 @media (min-width: 992px) {
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 		float: left;
+		width 50%
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	.col-lg-1 {
